# ComputationalMathCPP

./: CMakeLists.txt  Console.cpp  Console.h  Equation.cpp  Equation.h  EquationsSystem.cpp  EquationsSystem.h  UserCommand.cpp  UserCommand.h  lin_eq_solver.cpp  lin_eq_solver.h  main.cpp  matrix.cpp  matrix.h
